RESOLVED FIXED227378
Fix WKDownloadDelegate header doc
https://bugs.webkit.org/show_bug.cgi?id=227378
Summary Fix WKDownloadDelegate header doc
Alex Christensen
Reported 2021-06-24 15:33:46 PDT
Fix WKDownloadDelegate header doc
Attachments
Patch (2.35 KB, patch)
2021-06-24 15:35 PDT, Alex Christensen
beidson: review+
Alex Christensen
Comment 1 2021-06-24 15:35:27 PDT
Alex Christensen
Comment 2 2021-06-24 15:45:08 PDT
Note You need to log in before you can comment on or make changes to this bug.