Fix WKDownloadDelegate header doc https://bugs.webkit.org/show_bug.cgi?id=227378

Reviewed by Brady Eidson.

This removes the following sentence:
"If this is a download of a blob URL, response will be null."
This was correct in an earlier iteration of the implementation of this API, but is now incorrect
and verified by the WKDownload.BlobResponse API test.

* UIProcess/API/Cocoa/WKDownloadDelegate.h:



Canonical link: https://commits.webkit.org/239132@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279248 268f45cc-cd09-0410-ab3c-d52691b4dbfc